--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -26,7 +26,7 @@ header{
     background-color: black;
     color: white;
     text-align: center;
-    font-weight: bold;
+    
 }
 
 
@@ -34,15 +34,17 @@ header > h1 {
     font-family: var(--fonte-padrao);
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
+    font-weight: bold;
 }
 
 header > p {
     padding-bottom: 50px;
-    margin-top: 20px;
 }
 
-a {
+header > p > a {
     text-decoration: none;
+    font-weight: bold;
     color: white;
 }
 
@@ -107,4 +109,11 @@ footer{
     padding: 10px;
     text-align: center;
     font-weight: bold;
+}
+footer > p > a{
+    text-decoration: none;
+    color: lightblue;
+}
+footer > p > a:hover{
+    text-decoration: underline;
 }
